# caticorn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sh  run_web.sh
k8s/: caticorn.yaml
src/: main.rs
wasm/: index.html
