[package]
name = "caticorn"
version = "1.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "fd32c6f0ec2b7b6c1936d6929d6e6303c9b8524c" }
rand = "0.8.5"
clap = {version="4.3", features=["derive"]}

[build-dependencies]
built = { version = "0.6", features = ["git2", "chrono"] }
